fixed image size overflow in small screen

--- a/docs/.vuepress/theme/assets/sass/main.scss
+++ b/docs/.vuepress/theme/assets/sass/main.scss
@@ -274,6 +274,11 @@
 		text-align: right;
 	}
 
+	#content {
+		p > img {
+			max-width: 100%;
+		}
+	}
 /* Loader */
 
 	// Spinner
